--- a/component.html
+++ b/component.html
@@ -24,7 +24,7 @@
           "default": true
         },
         "open": {
-          "description": "Open the gate"
+          "description": "Open the gate",
           "label": "Open"
         },
         "close": {
