--- a/component.html
+++ b/component.html
@@ -37,7 +37,7 @@
   </ceci-definition>
   <script>
     Polymer('ceci-boolean-gate', {
-      open: true
+      open: true,
       ready: function() {
         this.super();
         this.open = true;
