--- a/component.html
+++ b/component.html
@@ -57,11 +57,11 @@
           this.$.state.classList.add("open");
         }
       },
-      on: function() {
+      open: function() {
         this.isOpen = true;
         this.updateUI();
       },
-      off: function() {
+      close: function() {
         this.isOpen = false;
         this.updateUI();
       },
