i can be silly sometimes

--- a/component.html
+++ b/component.html
@@ -34,13 +34,12 @@
   </ceci-definition>
   <script>
     Polymer('ceci-string-concat', {
-      this.str1 = "",
-      this.str2 = "",
+      this.str1: "",
+      this.str2: "",
       ready: function() {
         this.super();
       },
       attached: function(){
-        var that = this;
         this.super();
       },
       check: function() {
