--- a/component.html
+++ b/component.html
@@ -34,8 +34,8 @@
   </ceci-definition>
   <script>
     Polymer('ceci-string-concat', {
-      this.str1: "",
-      this.str2: "",
+      str1: "",
+      str2: "",
       ready: function() {
         this.super();
       },
