--- a/component.html
+++ b/component.html
@@ -44,7 +44,7 @@
       },
       check: function() {
         if ( this.str1 && this.str2 ) {
-          this.broadcast("output", str1 + str2 );
+          this.broadcast("output", this.str1 + this.str2 );
           this.str1 = this.str2 = "";
         }
       },
